finished contact form and ability to send the email. Correct some UI for unity.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
     "bblogo"
   ],
   "cSpell.words": [
+    "bluebyrddevelopment",
     "borntoridepleasantontx",
     "cheerfulcalculations",
     "favoriting",
